cmake_minimum_required(VERSION 3.16)
project(CS260)

set(CMAKE_CXX_STANDARD 14)



# Assignment 03
#add_executable(CS260 Assignment03/Main.cpp)

# Assignment 04
#add_executable(CS260 Assignment04/Main.cpp)

# Assignment 05
#add_executable(CS260 Assignment05/Main.cpp)

# Assignment 06
#add_executable(CS260 Assignment06/Main.cpp)

# Assignment 07
#add_executable(CS260 Assignment07/Main.cpp)

# Assignment Final
add_executable(CS260 AssignmentFinal/Main.cpp)